removes notes from index, fixes spacing on index

--- a/app/assets/stylesheets/payments.scss
+++ b/app/assets/stylesheets/payments.scss
@@ -34,7 +34,7 @@
 .welcome-message {
 	width: 100%;
 	text-align: center;
-	margin-top: 9%;
+	margin-top: 6%;
 	.greeting {
 		font-family: 'Roboto', sans-serif;
 		font-weight: 700;
